# camera-iqa-app

./: .gitignore  README.md  pyproject.toml
camera_iqa/: __init__.py  av_sync.py  catalog.py  cli.py  config.py  detectors.py  grayscale_chart.py  hyres.py  ite_resolution.py  metrics.py  models.py  pipeline.py  report_excel.py  stripe_fov.py
camera_iqa_app/: __init__.py  __main__.py  main.py
camera_iqa_app/ui/: main_window.py
camera_iqa_app/workers/: batch_worker.py
config/: default_thresholds.yaml
docs/superpowers/plans/: 2026-05-31-ite-resolution.md  2026-05-31-opencv-objective-defects.md
docs/superpowers/specs/: 2026-05-31-ite-resolution-design.md
outputs/: avsync_demo_analysis.csv
scripts/: debug_stripe_fov.py
tests/: test_av_sync.py  test_catalog.py  test_detectors.py  test_grayscale_chart.py  test_hyres.py  test_ite_resolution.py  test_objective_defects.py  test_stripe_fov.py
