[project]
name = "camera-iqa-app"
version = "0.1.0"
description = "PyQt6 desktop tool for security camera image quality assessment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.6",
  "opencv-python>=4.8",
  "numpy>=1.24",
  "Pillow>=10.0",
  "openpyxl>=3.1",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["camera_iqa", "camera_iqa.*", "camera_iqa_app", "camera_iqa_app.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
